@@ -735,6 +735,8 @@ def merging_cc(params, nb_cpu, nb_gpu, use_gpu):
     cc_merge = params.getfloat('clustering', 'cc_merge')
     norm = n_e * n_t
     decimation = params.getboolean('clustering', 'decimation')
+    adapted_cc = params.getboolean('clustering', 'adapted_cc')
+    adapted_thr = params.getint('clustering', 'adapted_thr')
 
     if cc_merge < 1:
 
@@ -793,6 +795,10 @@ def merging_cc(params, nb_cpu, nb_gpu, use_gpu):
         comm.Barrier()
 
         if comm.rank == 0:
+            if adapted_cc:
+                common_supports = load_data(params, 'common-supports')
+                exponents = numpy.exp(-common_supports/adapted_thr)
+                distances = distances ** exponents
             result = load_data(params, 'clusters')
             to_merge, result = remove(result, distances, cc_merge)
 
@@ -1203,6 +1209,7 @@ def delete_mixtures(params, nb_cpu, nb_gpu, use_gpu):
     template_shift = params.getint('detection', 'template_shift')
     cc_merge = params.getfloat('clustering', 'cc_merge')
     mixtures = []
+    norm = n_e * n_t
     # to_remove = []  # TODO remove (not used)?
 
     filename = params.get('data', 'file_out_suff') + '.overlap-mixtures.hdf5'
@@ -1213,6 +1220,8 @@ def delete_mixtures(params, nb_cpu, nb_gpu, use_gpu):
     inv_nodes = numpy.zeros(n_total, dtype=numpy.int32)
     inv_nodes[nodes] = numpy.arange(len(nodes))
     has_support = test_if_support(params, '')
+    adapted_cc = params.getboolean('clustering', 'adapted_cc')
+    adapted_thr = params.getint('clustering', 'adapted_thr')
 
     overlap = get_overlaps(
         params, extension='-mixtures', erase=True, normalize=True, maxoverlap=False, verbose=False, half=True,
@@ -1252,6 +1261,10 @@ def delete_mixtures(params, nb_cpu, nb_gpu, use_gpu):
 
     overlap_0 = numpy.zeros(nb_temp, dtype=numpy.float32)
     distances = numpy.zeros((nb_temp, nb_temp), dtype=numpy.int32)
+
+    if adapted_cc:
+        common_supports = load_data(params, 'common-supports')
+        exponents = numpy.exp(-common_supports/adapted_thr)
 
     for i in range(nb_temp - 1):
         data = c_overs[i].toarray()
@@ -1316,9 +1329,17 @@ def delete_mixtures(params, nb_cpu, nb_gpu, use_gpu):
                         if t_j is None:
                             t_j = templates[:, j].toarray().ravel()
                         new_template = (a1 * t_i + a2 * t_j)
-                        similarity = numpy.corrcoef(t_k, new_template)[0, 1]
-                        local_overlap = numpy.corrcoef(t_i, t_j)[0, 1]
-                        if similarity > cc_merge and local_overlap < 0.5:
+                        similarity = numpy.dot(t_k, new_template)/norm
+                        local_overlap = numpy.dot(t_i, t_j)/norm
+                        if adapted_cc:
+                            shared_support = numpy.sum(numpy.logical_or(supports[i], supports[j])*supports[k])
+                            exponent = numpy.exp(-shared_support/adapted_thr)
+                            mytest1 = similarity**exponent > cc_merge
+                            mytest2 = local_overlap**exponents[i, j] < 0.5
+                        else:
+                            mytest1 = similarity > cc_merge
+                            mytest2 = local_overlap < 0.5
+                        if mytest1 and mytest2:
                             if k not in mixtures:
                                 mixtures += [k]
                                 been_found = True
