@@ -1040,13 +1040,24 @@ def load_data(params, data, extension=''):
     elif data == 'supports':
         if os.path.exists(file_out_suff + '.templates%s.hdf5' % extension):
             myfile = h5py.File(file_out_suff + '.templates%s.hdf5' % extension, 'r', libver='earliest')
-            norms = myfile.get('supports')[:]
+            supports = myfile.get('supports')[:]
             myfile.close()
-            return norms
+            return supports
         else:
             if comm.rank == 0:
                 print_and_log(["No supports found! Check suffix?"], 'error', logger)
             sys.exit(0)
+    elif data == 'common-supports':
+        if os.path.exists(file_out_suff + '.templates%s.hdf5' % extension):
+            myfile = h5py.File(file_out_suff + '.templates%s.hdf5' % extension, 'r', libver='earliest')
+            supports = myfile.get('supports')[:]
+            myfile.close()
+            nb_temp = len(supports)
+            nb_elec = supports.shape[1]
+            res = numpy.ones((nb_temp, nb_temp), dtype=numpy.float32)
+            for i in range(nb_temp):
+                res[i] = numpy.sum(numpy.logical_and(supports[i], supports), 1)
+            return res
     elif data == 'spike-cluster':
         filename = params.get('data', 'data_file_noext') + '.spike-cluster.hdf5'
         if os.path.exists(filename):
