@@ -7,6 +7,7 @@ Release 0.9.7
 * fix a rare bug when both peaks are detect in clustering with smart search
 * fix a bug while converting with export_all
 * speeding up the fitting procedure
+* enhancing the non-selection of noisy snippets, and thus clustering
 
 =============
 Release 0.9.6
